--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,3 @@
-body {
-	}
 .grid {
 	display:grid;
         grid-template-rows: repeat(8,1fr);
@@ -10,6 +8,41 @@ body {
         gap:10px
 	}
 header {
-	font-size:40px;
+	font-size:20px;
 	font-family: "courier new";
+	grid-column-start:1; 
+	grid-column-end:9;
+	grid-row-start:1;
+	grid-row-end:2;
+	}
+#intro {
+	font-family:"times new roman";
+	font-size:20px;
+	grid-column-start:1; 
+        grid-column-end:6;
+        grid-row-start:2;
+        grid-row-end:3;
+	}
+#quote {
+	font-family:"times new roman";
+	font-size:20px;
+        grid-column-start:1;
+        grid-column-end:6;
+        grid-row-start:3;
+        grid-row-end:4;
+	}
+#journal {
+	font-family:"times new roman";
+	font-size:20px;
+        grid-column-start:1;
+        grid-column-end:6;
+        grid-row-start:4;
+        grid-row-end:5;
+	}
+#me {
+	font-size:10px;
+        grid-column-start:6;
+        grid-column-end:9;
+        grid-row-start:3;
+        grid-row-end:5;
 	}
