--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
+html { 
+	background:#e9d9d6;
+	}
 .grid {
 	display:grid;
         grid-template-rows: repeat(8,1fr);
@@ -10,21 +13,22 @@
 header {
 	font-size:20px;
 	font-family: "courier new";
+	color:#c37a6d;
 	grid-column-start:1; 
 	grid-column-end:9;
 	grid-row-start:1;
 	grid-row-end:2;
 	}
 #intro {
-	font-family:"times new roman";
+	font-family:"Playfair Display";
 	font-size:20px;
 	grid-column-start:1; 
         grid-column-end:6;
         grid-row-start:2;
         grid-row-end:3;
 	}
-#quote {
-	font-family:"times new roman";
+blockquote {
+	font-family:"courier new";
 	font-size:20px;
         grid-column-start:1;
         grid-column-end:6;
@@ -38,6 +42,14 @@ header {
         grid-column-end:6;
         grid-row-start:4;
         grid-row-end:5;
+	display: block;
+  width:300px;
+  height:30px;
+  padding:2px;
+  border:3px solid #c37a6d;    
+  background-color:#c8887c;
+	margin-left:auto;
+	margin-right:auto;	 
 	}
 #me {
 	font-size:10px;
