--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@ blockquote {
         grid-row-start:3;
         grid-row-end:4;
 	}
-#journal {
+.links {
 	font-family:"times new roman";
 	font-size:20px;
         grid-column-start:1;
@@ -44,7 +44,7 @@ blockquote {
         grid-row-end:5;
 	display: block;
   width:300px;
-  height:30px;
+  height:60px;
   padding:2px;
   border:3px solid #c37a6d;    
   background-color:#c8887c;
