--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@ blockquote {
         grid-row-start:3;
         grid-row-end:4;
 	}
-.links {
+#journal {
 	font-family:"times new roman";
 	font-size:20px;
         grid-column-start:1;
@@ -44,13 +44,29 @@ blockquote {
         grid-row-end:5;
 	display: block;
   width:300px;
-  height:60px;
+  height:30px;
   padding:2px;
   border:3px solid #c37a6d;    
   background-color:#c8887c;
 	margin-left:auto;
 	margin-right:auto;	 
 	}
+#projects {
+	font-family:"times new roman";
+        font-size:20px;
+        grid-column-start:1;
+        grid-column-end:6;
+        grid-row-start:4;
+        grid-row-end:5;
+        display: block;
+  width:300px;
+  height:30px;
+  padding:2px;
+  border:3px solid #c37a6d;
+  background-color:#c8887c;
+        margin-left:auto;
+        margin-right:auto;
+}
 #me {
 	font-size:10px;
         grid-column-start:6;
