--- a/styles.css
+++ b/styles.css
@@ -71,6 +71,8 @@ blockquote {
 	font-size:10px;
         grid-column-start:6;
         grid-column-end:9;
-        grid-row-start:3;
+        grid-row-start:2;
         grid-row-end:5;
+	margin-left:25px;
+
 	}
