--- a/image_gallery.css
+++ b/image_gallery.css
@@ -22,8 +22,11 @@
 #I {
 	width: 300px;
 	height: 250px;
+	border-radius: 8px;
+	border: 2px solid #000;
 }
 #N {
 	width: 300px;
 	height: 250px;
-}
+	transform: scaleX(-1);
+}	
