--- a/styles.css
+++ b/styles.css
@@ -76,3 +76,10 @@ blockquote {
 	margin-left:25px;
 
 	}
+#sun {
+        grid-column-start:1;
+        grid-column-end:6;
+        grid-row-start:6;
+        grid-row-end:7;
+        margin-left:25px;
+}
