--- a/styles.css
+++ b/styles.css
@@ -35,38 +35,27 @@ blockquote {
         grid-row-start:3;
         grid-row-end:4;
 	}
-#journal {
-	font-family:"times new roman";
-	font-size:20px;
-        grid-column-start:1;
-        grid-column-end:6;
-        grid-row-start:4;
-        grid-row-end:5;
-	display: block;
-  width:300px;
-  height:30px;
-  padding:2px;
-  border:3px solid #c37a6d;    
-  background-color:#c8887c;
-	margin-left:auto;
-	margin-right:auto;	 
-	}
-#projects {
-	font-family:"times new roman";
-        font-size:20px;
-        grid-column-start:1;
-        grid-column-end:6;
-        grid-row-start:5;
-        grid-row-end:6;
-        display: block;
-  width:300px;
-  height:30px;
-  padding:2px;
-  border:3px solid #c37a6d;
-  background-color:#c8887c;
-        margin-left:auto;
-        margin-right:auto;
+#journal, #projects {
+    font-family: "times new roman";
+    font-size: 20px;
+    grid-column-start: 1;
+    grid-column-end: 6;
+    display: block;
+    width: 300px;
+    height: 30px;
+    padding: 2px;
+    border: 3px solid #c37a6d;
+    background-color: #c8887c;
+    margin-left: auto;
+    margin-right: auto;
+    transition: background-color 0.3s ease, color 0.3s ease; /* Add smooth transition */
 }
+
+#journal:hover, #projects:hover {
+    background-color: #e9d9d6; /* New background color on hover */
+    color: #c37a6d; /* New text color on hover */
+}
+
 #me {
 	font-size:10px;
         grid-column-start:6;
@@ -82,14 +71,4 @@ blockquote {
         grid-row-start:6;
         grid-row-end:7;
 }
-.color-change {
-    background-color: #c8887c;
-    color: black;
-    padding: 10px 20px;
-    border: none;
-    transition: background-color 0.3s ease-in-out;
-}
 
-.color-change:hover {
-    background-color:"white";
-}
