--- a/emoji.css
+++ b/emoji.css
@@ -92,3 +92,33 @@ footer{
     transform: translate(50%);
     top: 70px;
 }
+
+/* Add animation to the emoji */
+@keyframes bounce {
+    0%, 100% {
+        transform: translate(-50%, -50%) scale(1);
+    }
+    50% {
+        transform: translate(-50%, -60%) scale(1.1);
+    }
+}
+
+.emoji {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 300px;
+    width: 300px;
+    background-image: radial-gradient(
+        #feca3e 58%,
+        #ff8000 80%
+    );
+    border-radius: 50%;
+    overflow: hidden;
+    box-shadow: 30px 30px 35px rgba(0,0,0,0.25);
+
+    /* Add the animation */
+    animation: bounce 2s infinite;
+}
+
