--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@ blockquote {
     width: 300px;
     height: 30px;
     padding: 2px;
-    border: 3px solid #c37a6d;
+    border: 3px solid #000000;
     background-color: #c8887c;
     margin-left: auto;
     margin-right: auto;
